--- a/index.html
+++ b/index.html
@@ -6,6 +6,76 @@
     <title>Rain World</title>
 </head>
 <body>
-    
+    <main>
+        <div>
+            <img src="./assets/Rain World cover.jfif" alt="Cover do jogo Rain World">
+
+            <section class="apresentacao">
+                <h1>Rain World - Informações importantes</h1>
+
+                <p>Aqui você terá o básico para poder jogar este jogo maravilhoso - apesar de ser difícil.</p>
+            </section>
+
+            <section class="conteudo">
+                <p>Estas serão as mecânicas abordadas nesta página:</p>
+
+                <h2>Conteúdo</h2>
+
+                <ul>
+                    <li>Karma</li>
+                    <li>Hibernação</li>
+                    <li>Chuva</li>
+                </ul>
+            </section>
+
+            <section class="karma">
+                <h2>Karma</h2>
+
+                <p>Karma é tanto uma mecância quanto um elemento da história de Rain World. Ele age primariamente como um portão para o jogador, requirindo um certo nível para progredir o mapa. Caso o jogador hiberne com sucesso, seu nível de karma subirá em um nível, a não ser que já esteja no nível máximo. Caso morto, o karma irá descer um nível, a não ser que possua uma flor de karma. </p>
+
+                <h3>Flores de karma</h3>
+
+                <p>Flores de karma são itens consumíveis que mantém o nível de karma do jogador, elas podem ser encontradas em localizações específicas pelo mapa. Ao morrer, o jogador não perde seu nível de karma, mas a proteção da flor irá acabar.</p>
+
+                <h3>Karma e seus símbolos</h3>
+
+                <ol>
+                    <li>Violência</li>
+                    <li>Luxúria</li>
+                    <li>Compania</li>
+                    <li>Gula</li>
+                    <li>Sobrevivente</li>
+                    <li>Karma do nível 6 ao 9 não tem significado explícito, porém o karma de nível 10 é usado pelo jogo como um símbolo de ascensão.</li>
+                </ol>
+
+                <img src="./assets/RWKarma.webp" alt="Lista de karma existentes no jogo">
+            </section>
+
+            <section class="hibernacao">
+                <h2>Hibernação</h2>
+
+                <p>Hibernar forma parte da gameplay principal do jogo, servindo como o objetivo final de cada ciclo, pois ele salva o progresso do jogador.</p>
+
+                <h3>Função</h3>
+
+                <p>A Hibernação é iniciada ao jogador entrar em um abrigo com comida o suficiente para dormir pela chuva. A quantidade total de comida requirida para dormir é indicada pelo medidor de comida no canto inferior esquerdo da tela.</p>
+
+                <p>A quantidade necessária varia dependendo da campanha. A linha dividada mostra quanto é necessário para hibernar, e quanto será armazenado para o próximo ciclo.</p>
+
+                <img src="./assets/Food requirements.png" alt="Requisitos de comida para hibernar">
+            </section>
+
+            <section class="chuva">
+                <h2>Chuva</h2>
+
+                <p>A chuva é um risco ambiental cronometrado mortal tanto para você quanto para as outras criaturas, aparecendo no final de cada ciclo, uma vez que o temporizador no jogo acabou.</p>
+
+                <p>Para evitar a chuva, o jogador deve buscar abrigo, do contrário, você morre.</p>
+
+                <img src="./assets/Rain starting.gif" alt="Gif da chuva começando">
+            </section>
+        </div>
+
+    </main>
 </body>
 </html>
