--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
     <main>
         <div>
-            <img src="./assets/Rain World cover.jfif" alt="Cover do jogo Rain World">
 
             <section class="apresentacao">
                 <h1>Rain World - Informações importantes</h1>
@@ -29,6 +28,8 @@
                     <li>Karma</li>
                     <li>Hibernação</li>
                     <li>Chuva</li>
+                    <li>Função</li>
+                    <li>FLores de karma</li>
                 </ul>
             </section>
 
@@ -52,7 +53,7 @@
                     <li>Karma do nível 6 ao 9 não tem significado explícito, porém o karma de nível 10 é usado pelo jogo como um símbolo de ascensão.</li>
                 </ol>
 
-                <img src="./assets/RWKarma.webp" alt="Lista de karma existentes no jogo">
+                <img src="./assets/RWKarma.webp" alt="Lista de karma existentes no jogo" class="Karma">
             </section>
 
             <section class="hibernacao">
@@ -66,7 +67,7 @@
 
                 <p>A quantidade necessária varia dependendo da campanha. A linha dividada mostra quanto é necessário para hibernar, e quanto será armazenado para o próximo ciclo.</p>
 
-                <img src="./assets/Food requirements.png" alt="Requisitos de comida para hibernar">
+                <img src="./assets/Food requirements.png" alt="Requisitos de comida para hibernar" class="RequisitoChuva">
             </section>
 
             <section class="chuva">
@@ -76,7 +77,7 @@
 
                 <p>Para evitar a chuva, o jogador deve buscar abrigo, do contrário, você morre.</p>
 
-                <img src="./assets/Rain starting.gif" alt="Gif da chuva começando">
+                <img src="./assets/Rain starting.gif" alt="Gif da chuva começando" class="Chuva">
             </section>
         </div>
 
